# verbose-lamp

./: EnglishBookReader.spec  README.md  build.sh  game.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  tailwind.config.js
.trae/documents/: PRD.md  TECH.md  minecraft-rebuild-plan.md  plan_english_book_reader.md
app/: __init__.py  config.py
app/core/: __init__.py  database.py  logger.py  migration.py  models.py
app/data/: app.db  app.db-shm  app.db-wal
app/services/: audio_service.py  book_service.py  progress_service.py  record_service.py  translate_service.py  user_service.py
app/ui/: __init__.py  main_window.py
app/ui/pages/: __init__.py  library_page.py  login_page.py  profile_page.py  reader_page.py
app/ui/widgets/: _base.py  audio_player.py  book_card.py  medal_widget.py  word_popup.py
assets_extracted/metadata/: books.json  word_dict.json
src/: App.tsx  index.css  main.tsx
src/components/: DebugPanel.tsx  GameCanvas.tsx  HelpPanel.tsx  Hotbar.tsx  OnScreenControls.tsx  SaveMenu.tsx  StartScreen.tsx  StatusBar.tsx
src/components/board/: Board.tsx  Dice.tsx  GameLoop.tsx
src/components/modals/: Modal.tsx
src/data/: cards.ts  characters.ts  items.ts  map.ts  stocks.ts
src/game/: audio.ts  blocks.ts  engine.ts  hotbar.ts  input.ts  renderer.ts  renderer2d.ts  renderer3d.ts  store.ts  textures.ts  tools.ts  types.ts  world.ts
src/pages/: Game.tsx  Help.tsx  Home.tsx  Select.tsx
src/store/: ai.ts  gameStore.ts  types.ts
src/utils/: helpers.ts
tools/: install_tools.sh  reverse.sh
(+5 files in other folders)
